--- a/src/main/resources/templates/userboard.html
+++ b/src/main/resources/templates/userboard.html
@@ -7,9 +7,9 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    body {
-      font-family: 'Roboto', sans-serif;
-    }
+
+    body {font-family: 'Noto Sans KR', sans-serif;}
+
     .like-button {
       cursor: pointer;
       transition: color 0.3s;
@@ -56,8 +56,11 @@
       <img src="https://github.com/user-attachments/assets/38c43d3b-dce7-422c-b89a-572308799e96" width="70" height="70" alt="Logo" class="mr-4">
     </a>
     <nav>
+      <a th:href="@{/public/main}" class="mr-4">홈</a>
       <a href="/public/userboardCollection" class="mr-4">오늘의 동친</a>
+      <a th:href="@{/public/popularMeets}" class="mr-4">인기 급 상승 모임</a>
       <a href="/public/meetsCollection" class="mr-4">내 주변 모임</a>
+      <a href="/public/MyPage" class="mr-4">MyPage</a>
     </nav>
   </div>
   <div class="flex items-center">
