add : 캐러셀 위해서 controller, service, repository 만듦

--- a/src/main/resources/templates/userboardCollection.html
+++ b/src/main/resources/templates/userboardCollection.html
@@ -99,7 +99,7 @@
       return fetch(url, options);
     }
 
-    document.getElementById('logoutButton').addEventListener('click', function() {
+    document.getElementById('logoutBtn').addEventListener('click', function() {
       localStorage.removeItem('Authorization');
       window.location.href = '/login';
     });
