feat : dev 머지 invitationList 초대 신청시, 리스트 조회 및 모임장 승인 거절 기능 구현 meets : // TODO 숫자 1 대신에 받아온 MeetId가 들어가야 정상 작동 됩니다. 별점기능 제외 like 포함 기능 페이지에 있는 버튼 모두 구현되어있습니다. userboard 페이지에 있는 버튼 모두 구현되어있습니다. const userBoardId = 1;   //TODO 숫자 1 대신에 받아온 BoardId 들어가야 정상 작동 됩니다.  @OneToMany(mappedBy = "userBoard", cascade = CascadeType.ALL, orphanRemoval = true)  private List<UserBoardComment> comments = new ArrayList<>();  보드 엔티티 추가작성 있었습니다. meetsResponseDto 수정 private String groupCreator; 생성

--- a/src/main/resources/templates/InvitationList.html
+++ b/src/main/resources/templates/InvitationList.html
@@ -32,6 +32,7 @@
     document.addEventListener('DOMContentLoaded', function () {
         //   const urlParams = new URLSearchParams(window.location.search);
         //    const meetId = urlParams.get('meetId'); // URL 에 해당 그룹에 대한 아이디 가져옴
+        const accessToken = localStorage.getItem("Authorization")
         const meetId = 1;
         fetch(`/groups/${meetId}/invitation`, {
             method: 'GET',
@@ -42,7 +43,7 @@
         })
             .then(response => response.json())
             .then(responseData => {
-                console.log('Response Data:', responseData);
+
                 if (responseData.message === "신청 목록을 불러왔습니다.") {
 
                     const invitationList = document.getElementById('invitationList');
@@ -65,7 +66,7 @@
                                     entryDiv.className = 'flex items-center bg-gray-200 p-4 rounded-lg shadow';
 
                                     const img = document.createElement('img');
-                                    img.src = profile.photo;
+                                    img.src = profile.image;
                                     img.alt = 'Profile';
                                     img.className = 'w-12 h-12 rounded-full mr-4';
 
@@ -89,7 +90,7 @@
                                     acceptButton.className = 'bg-black text-white px-4 py-2 rounded';
                                     acceptButton.textContent = '승인';
                                     acceptButton.addEventListener('click', function () {
-                                        fetch(`/groups/${meetId}/invitedboard/${item.userId}/accept`, {
+                                        fetch(`/groups/${meetId}/invitation/${item.userId}/accept`, {
                                             method: 'POST',
                                             headers: {
                                                 'Authorization': accessToken,
@@ -114,7 +115,7 @@
                                     rejectButton.className = 'bg-black text-white px-4 py-2 rounded';
                                     rejectButton.textContent = '거절';
                                     rejectButton.addEventListener('click', function () {
-                                        fetch(`/groups/${meetId}/invitedboard/${item.userId}/decline`, {
+                                        fetch(`/groups/${meetId}/invitation/${item.userId}/decline`, {
                                             method: 'POST',
                                             headers: {
                                                 'Authorization': accessToken,
