--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -71,7 +71,8 @@
 <header class="flex justify-between items-center p-4 bg-white shadow">
     <div class="flex items-center">
         <a href="/public/main">
-            <img src="https://github.com/user-attachments/assets/38c43d3b-dce7-422c-b89a-572308799e96" width="70" height="70" alt="Logo" class="mr-4">
+            <img src="https://github.com/user-attachments/assets/38c43d3b-dce7-422c-b89a-572308799e96" width="70"
+                 height="70" alt="Logo" class="mr-4">
         </a>
         <nav>
             <a href="/public/userboardCollection" class="mr-4">오늘의 동친</a>
@@ -175,9 +176,7 @@
                 //   const response = await fetchWithAuth('/chat.html');
                 const response = await fetchWithAuth('/meets.html');
                 if (response.ok) {
-
                     // TODO meets의 id 값을 넘겨줘야 합니다.
-
                     window.open(`/meets.html`, "meetsWindow", "width=800,height=600,top=100,left=100");
                 } else {
                     console.error('Failed to load chat.html');
@@ -198,6 +197,7 @@
                 console.error('Error loading chat.html:', error);
             }
         });
+
         function createCarousel(containerId, dotsId, numCards) {
             const container = document.getElementById(containerId);
             const dotsContainer = document.getElementById(dotsId);
