--- a/src/main/resources/templates/userboardCollection.html
+++ b/src/main/resources/templates/userboardCollection.html
@@ -20,6 +20,7 @@
       <img src="https://github.com/user-attachments/assets/38c43d3b-dce7-422c-b89a-572308799e96" width="70" height="70" alt="Logo" class="mr-4">
     </a>
     <nav class="space-x-4">
+      <a href="/public/userboardCollection" class="text-gray-700">오늘의 동친</a>
       <a href="/public/meetsCollection" class="text-gray-700">내 주변 모임</a>
       <a href="/public/MyPage" class="text-gray-700">My Page</a>
     </nav>
