--- a/src/main/resources/templates/meetsCollection.html
+++ b/src/main/resources/templates/meetsCollection.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Roboto', sans-serif;
+      font-family: 'Noto Sans KR', sans-serif;
     }
   </style>
   <link rel="icon" href="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FoXBYw%2FbtsIPXrDjTc%2FpLzzFxLchTAtiBSFLAfEX1%2Fimg.png" type="image/x-icon">
@@ -23,6 +23,7 @@
       <nav class="space-x-4">
         <a href="/public/userboardCollection" class="text-gray-700">오늘의 동친</a>
         <a href="/public/meetsCollection" class="text-gray-700">내 주변 모임</a>
+        <a href="/public/MyPage" class="text-gray-700">My Page</a>
       </nav>
       <button class="bg-black text-white px-4 py-2 rounded" id="logoutButton">로그아웃</button>
     </div>
